<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome!"
                android:textSize="14sp"
                android:textColor="#757575"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_tasks"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task_plus"
        android:layout_margin="15dp"/>

    <TextView
        android:id="@+id/txtEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_tasks_yet"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="30dp"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/listTasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="8dp"
        android:padding="10dp"/>

</LinearLayout>
